# DBManager-sqlite-

./: CMakeLists.txt  Sqlite3QT_ru_RU.ts  adminwindow.cpp  adminwindow.h  adminwindow.ui  columncreator.cpp  columncreator.h  columncreator.ui  columnrenamer.cpp  columnrenamer.h  columnrenamer.ui  dbmanager.cpp  dbmanager.h  entitycreator.cpp  entitycreator.h  entitycreator.ui  fkcreator.cpp  fkcreator.h  fkcreator.ui  loginwindow.cpp  loginwindow.h  loginwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
databases/: testdb.db
